# AI-firewall

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  glama.json  instruction.md  main.py  pyproject.toml  requirements.txt  server.json
.github/workflows/: ci.yml
src/: __init__.py  api.py  cli.py  models.py  orchestrator.py  vector_db.py
src/agents/: guard_agent.py  policy_agent.py  redteam_agent.py  retrieval_agent.py
src/ai_firewall/: __init__.py  api.py  cli.py  config.py  mcp_server.py  models.py  orchestrator.py  threat_scorer.py  vector_db.py
src/ai_firewall/agents/: __init__.py  guard_agent.py  policy_agent.py  redteam_agent.py  retrieval_agent.py
src/ai_firewall/data/: __init__.py  attack_patterns.py
src/data/: attack_patterns.py
tests/: __init__.py  test_firewall.py  test_mcp.py
